--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>نظام قياسات الثوب الذكي</title>
+  <title>إصدار المحل - قياسات الثوب الذكي</title>
   <style>
     body {
       font-family: sans-serif;
       text-align: center;
-      background-color: #f9f9f9;
+      background-color: #f0f0f0;
       margin: 0;
       padding: 0;
     }
@@ -17,51 +17,108 @@
       background-color: #2d2d2d;
       color: white;
       padding: 20px;
+      margin: 0;
     }
-    #video {
-      width: 100%;
-      max-width: 400px;
-      margin-top: 20px;
-      border: 4px solid #333;
-      border-radius: 12px;
+    .mode-selection {
+      margin-top: 30px;
     }
-    .measurements {
-      margin-top: 20px;
-      background: #fff;
-      padding: 15px;
-      border-radius: 10px;
-      display: inline-block;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .measurements p {
-      margin: 8px 0;
+    .mode-button {
+      padding: 15px 30px;
+      margin: 10px;
       font-size: 1.2em;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .mode-button.ready {
+      background-color: #4CAF50;
+      color: white;
+    }
+    .mode-button.body {
+      background-color: #2196F3;
+      color: white;
+    }
+    .result-box {
+      margin-top: 30px;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      display: none;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .result-box p {
+      font-size: 1.1em;
+      margin: 10px 0;
+    }
+    #copyBtn {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1em;
+      border: none;
+      background-color: #ff9800;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>📏 نظام قياسات الثوب الذكي</h1>
+  <h1>📏 إصدار المحل - قياسات الثوب الذكي</h1>
 
-  <video id="video" autoplay></video>
+  <div class="mode-selection">
+    <p>اختر طريقة القياس:</p>
+    <button class="mode-button ready" onclick="showResults('ready')">🧥 قياس من ثوب جاهز</button>
+    <button class="mode-button body" onclick="showResults('body')">🧍‍♂️ قياس الجسم المباشر</button>
+  </div>
 
-  <div class="measurements">
-    <p>الطول التقديري: 172 سم</p>
-    <p>عرض الكتفين: 45 سم</p>
-    <p>طول الذراع: 60 سم</p>
-    <p>محيط الرقبة (مطلوب يدويًا): 38 سم</p>
+  <div class="result-box" id="resultsBox">
+    <p id="resultsText"></p>
+    <button id="copyBtn" onclick="copyResults()">📋 نسخ القياسات</button>
   </div>
 
   <script>
-    const video = document.getElementById("video");
+    function showResults(mode) {
+      const resultsBox = document.getElementById("resultsBox");
+      const resultsText = document.getElementById("resultsText");
 
-    navigator.mediaDevices.getUserMedia({ video: true })
-      .then((stream) => {
-        video.srcObject = stream;
-      })
-      .catch((err) => {
-        alert("لم يتم الوصول إلى الكاميرا. الرجاء السماح للمتصفح.");
-        console.error(err);
+      if (mode === 'ready') {
+        resultsText.innerText =
+          "📏 تم القياس من ثوب جاهز:
+" +
+          "الطول الكامل: 138 سم
+" +
+          "عرض الأكتاف: 46 سم
+" +
+          "طول الذراع: 61 سم
+" +
+          "محيط الرقبة: 38 سم (يُدخل يدويًا)";
+      } else {
+        resultsText.innerText =
+          "📏 تم القياس من الجسم مباشرة:
+" +
+          "الطول من الكتف للقدم: 140 سم
+" +
+          "عرض الأكتاف: 47 سم
+" +
+          "عرض الصدر: 43 سم
+" +
+          "طول الذراع: 60 سم
+" +
+          "محيط الرقبة: يُدخل يدويًا";
+      }
+
+      resultsBox.style.display = "block";
+    }
+
+    function copyResults() {
+      const text = document.getElementById("resultsText").innerText;
+      navigator.clipboard.writeText(text).then(() => {
+        alert("✅ تم نسخ القياسات بنجاح!");
       });
+    }
   </script>
 </body>
 </html>
