--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>إصدار المحل - قياسات الثوب الذكي</title>
+  <title>قياسات الثوب الذكي - إصدار المحل</title>
   <style>
     body {
-      font-family: sans-serif;
-      text-align: center;
-      background-color: #f0f0f0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
     h1 {
-      background-color: #2d2d2d;
+      background-color: #343a40;
       color: white;
       padding: 20px;
       margin: 0;
     }
     .mode-selection {
-      margin-top: 30px;
+      margin: 30px 0;
     }
     .mode-button {
       padding: 15px 30px;
@@ -31,101 +30,82 @@
       cursor: pointer;
     }
     .mode-button.ready {
-      background-color: #4CAF50;
+      background-color: #28a745;
       color: white;
     }
     .mode-button.body {
-      background-color: #2196F3;
+      background-color: #007bff;
       color: white;
     }
     .result-box {
-      margin-top: 30px;
-      padding: 20px;
       background: white;
+      padding: 20px;
       border-radius: 10px;
-      display: none;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: none;
       max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: auto;
     }
     .result-box p {
       font-size: 1.1em;
-      margin: 10px 0;
+      line-height: 1.6;
     }
     #copyBtn {
-      margin-top: 20px;
+      margin-top: 15px;
       padding: 10px 20px;
-      font-size: 1em;
-      border: none;
       background-color: #ff9800;
       color: white;
+      border: none;
       border-radius: 6px;
+      font-size: 1em;
       cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>📏 إصدار المحل - قياسات الثوب الذكي</h1>
+  <h1>📏 قياسات الثوب الذكي - إصدار المحل</h1>
 
   <div class="mode-selection">
     <p>اختر طريقة القياس:</p>
-    <button class="mode-button ready" id="btnReady">🧥 قياس من ثوب جاهز</button>
-    <button class="mode-button body" id="btnBody">🧍‍♂️ قياس الجسم المباشر</button>
+    <button class="mode-button ready" onclick="showResults('ready')">🧥 قياس من ثوب جاهز</button>
+    <button class="mode-button body" onclick="showResults('body')">🧍‍♂️ قياس الجسم المباشر</button>
   </div>
 
   <div class="result-box" id="resultsBox">
     <p id="resultsText"></p>
-    <button id="copyBtn">📋 نسخ القياسات</button>
+    <button id="copyBtn" onclick="copyResults()">📋 نسخ القياسات</button>
   </div>
 
   <script>
-    document.getElementById("btnReady").addEventListener("click", function() {
-      showResults('ready');
-    });
+    function showResults(mode) {
+      const box = document.getElementById("resultsBox");
+      const text = document.getElementById("resultsText");
 
-    document.getElementById("btnBody").addEventListener("click", function() {
-      showResults('body');
-    });
+      if (mode === 'ready') {
+        text.innerText =
+          "📏 تم القياس من ثوب جاهز:\n" +
+          "الطول الكامل: 138 سم\n" +
+          "عرض الأكتاف: 46 سم\n" +
+          "طول الذراع: 61 سم\n" +
+          "محيط الرقبة: 38 سم (يُدخل يدويًا)";
+      } else {
+        text.innerText =
+          "📏 تم القياس من الجسم مباشرة:\n" +
+          "الطول من الكتف للقدم: 140 سم\n" +
+          "عرض الأكتاف: 47 سم\n" +
+          "عرض الصدر: 43 سم\n" +
+          "طول الذراع: 60 سم\n" +
+          "محيط الرقبة: يُدخل يدويًا";
+      }
 
-    document.getElementById("copyBtn").addEventListener("click", function() {
+      box.style.display = "block";
+    }
+
+    function copyResults() {
       const text = document.getElementById("resultsText").innerText;
       navigator.clipboard.writeText(text).then(() => {
         alert("✅ تم نسخ القياسات بنجاح!");
       });
-    });
-
-    function showResults(mode) {
-      const resultsBox = document.getElementById("resultsBox");
-      const resultsText = document.getElementById("resultsText");
-
-      if (mode === 'ready') {
-        resultsText.innerText =
-          "📏 تم القياس من ثوب جاهز:
-" +
-          "الطول الكامل: 138 سم
-" +
-          "عرض الأكتاف: 46 سم
-" +
-          "طول الذراع: 61 سم
-" +
-          "محيط الرقبة: 38 سم (يُدخل يدويًا)";
-      } else {
-        resultsText.innerText =
-          "📏 تم القياس من الجسم مباشرة:
-" +
-          "الطول من الكتف للقدم: 140 سم
-" +
-          "عرض الأكتاف: 47 سم
-" +
-          "عرض الصدر: 43 سم
-" +
-          "طول الذراع: 60 سم
-" +
-          "محيط الرقبة: يُدخل يدويًا";
-      }
-
-      resultsBox.style.display = "block";
     }
   </script>
 </body>
