--- a/index.html
+++ b/index.html
@@ -60,10 +60,19 @@
       font-size: 1em;
       cursor: pointer;
     }
+    video {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 10px;
+      margin-top: 20px;
+      display: none;
+    }
   </style>
 </head>
 <body>
   <h1>📏 قياسات الثوب الذكي - إصدار المحل</h1>
+
+  <video id="video" autoplay playsinline></video>
 
   <div class="mode-selection">
     <p>اختر طريقة القياس:</p>
@@ -77,6 +86,17 @@
   </div>
 
   <script>
+    const video = document.getElementById("video");
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then((stream) => {
+        video.srcObject = stream;
+        video.style.display = "block";
+      })
+      .catch((err) => {
+        alert("⚠️ لم يتم السماح باستخدام الكاميرا. الرجاء تفعيل الإذن من المتصفح.");
+        console.error(err);
+      });
+
     function showResults(mode) {
       const box = document.getElementById("resultsBox");
       const text = document.getElementById("resultsText");
@@ -84,17 +104,17 @@
       if (mode === 'ready') {
         text.innerText =
           "📏 تم القياس من ثوب جاهز:\n" +
-          "الطول الكامل: 138 سم\n" +
-          "عرض الأكتاف: 46 سم\n" +
-          "طول الذراع: 61 سم\n" +
-          "محيط الرقبة: 38 سم (يُدخل يدويًا)";
+          "الطول الكامل: 54.3 إنش\n" +
+          "عرض الأكتاف: 18.1 إنش\n" +
+          "طول الذراع: 24 إنش\n" +
+          "محيط الرقبة: 15 إنش (يُدخل يدويًا)";
       } else {
         text.innerText =
           "📏 تم القياس من الجسم مباشرة:\n" +
-          "الطول من الكتف للقدم: 140 سم\n" +
-          "عرض الأكتاف: 47 سم\n" +
-          "عرض الصدر: 43 سم\n" +
-          "طول الذراع: 60 سم\n" +
+          "الطول من الكتف للقدم: 55.1 إنش\n" +
+          "عرض الأكتاف: 18.5 إنش\n" +
+          "عرض الصدر: 16.9 إنش\n" +
+          "طول الذراع: 23.6 إنش\n" +
           "محيط الرقبة: يُدخل يدويًا";
       }
 
